Revert "Merge pull request #2749 from Applifier/fix/close-button-clackable-z-index-hell"
This reverts commit 7380c7ae43224f064cbb8963fb1197bfdbec6e83, reversing
changes made to d5e7b195279e8cac667ab57353873e53e138d7d3.

--- a/src/styl/dark-end-screen-theme.styl
+++ b/src/styl/dark-end-screen-theme.styl
@@ -3,7 +3,7 @@
 #end-screen {
 
   .btn-close-region.dark-end-screen {
-    z-index: 20;
+    z-index: 10;
   }
 
   .campaign-container.dark-end-screen {
